--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .header-logo-img {
     width: 200px;
     height: 100px;
+    border-radius: 0;
 }
 .header-logo-img2 {
     width: 200px;
@@ -79,4 +80,26 @@ nav ul {
     margin-left: auto;
     margin-right: auto;
     margin-top: 7px;
+}
+
+
+.article-div {
+    width:100%;
+    height:200px;
+    margin-top: 10px;
+}
+
+article p {
+    font-size: 30px;
+    text-align: center;
+    transition: transform 0.3 ease;
+}
+
+
+article img {
+    transition: transform 0.3 ease;
+}
+
+article img:hover, article p:hover {
+    transform: scale(1.03);
 }
