--- a/generalStyles.css
+++ b/generalStyles.css
@@ -49,6 +49,7 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     column-gap: 20px;
+    margin-bottom: 50px;
 
 }
 
