--- a/styles.css
+++ b/styles.css
@@ -102,9 +102,27 @@ nav ul {
     }
 }
 
+@media (max-width: 1350px) {
+    #first-row-text {
+        font-size: 25px;
+    }
+}
+
 @media (max-width: 1000px) {
     #first-row-text {
         font-size: 20px;
+    }
+}
+
+@media (max-width: 700px) {
+    #first-row-text {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 600px) {
+    #first-row-text {
+        font-size: 13px;
     }
 }
 
@@ -114,7 +132,7 @@ nav ul {
     }
 }
 
-article p { 
+article > div > p { 
     font-size: 30px;
     font-weight: 500;
     text-align: center;
@@ -130,7 +148,35 @@ article img:hover {
     transform: scale(1.03);
     opacity: 0.8;
 }
-
-article p:hover, .article-div:hover {
+article > div > p, .article-div:hover {
     transform: scale(1.03);
+}
+
+.footer-section1 {
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo-img1 {
+    width: 5vw;
+    height: auto;
+    border-radius: 0;
+    margin-right: 40px;
+}
+
+.footer-logo-img2 {
+    width: 20vw;
+    height: auto;
+    border-radius: 0;
+}
+
+.footer-section2 {
+    position: relative;
+}
+.footer-section2 > p {
+    position:absolute;
+    right:0;
+    bottom: 0;
+    font-size: 20px;
+
 }
