--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ article img:hover {
     transform: scale(1.03);
     opacity: 0.8;
 }
-article > div > p, .article-div:hover {
+article > div > p, .article-div:hover, ul li:hover {
     transform: scale(1.03);
 }
 
