Finished the booking tab. Clients can now use the booking form to book an appointment

--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,38 @@ article > div > p, .article-div:hover, ul li:hover {
 .about-images {
     width: 600px;
 }
+
+#full-name {
+    height: 35px;
+    border-radius: 20px;
+    text-indent: 10px;
+
+}
+
+.adjust-div {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#date-appointment {
+    height: 35px;
+    border-radius: 20px;
+    text-indent: 4px;
+}
+
+#radio-service {
+    transform: scale(2)
+}
+
+#submit-button {
+    height: 40px;
+    width: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+#submit-button:hover {
+    background-color: rgb(194, 194, 194);
+}
