--- a/generalStyles.css
+++ b/generalStyles.css
@@ -15,6 +15,14 @@ a {
     justify-content: center;
 }
 
+label {
+    font-family: Roboto, Arial;
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+
+
 li {
     display: flex;
 }
