--- a/generalStyles.css
+++ b/generalStyles.css
@@ -73,7 +73,7 @@ header {
 }
 
 nav {
-    background-color: rgb(255, 253, 208);
+    background-color: mistyrose;
 }
 
 main {
@@ -86,6 +86,7 @@ main {
     grid-column: 1 / -1;
     background-color: rgb(251, 136, 65);
     margin-bottom: 10px;
+    background-image: url(hairsalon.jpg);
 }
 
 .three-columns {
@@ -100,4 +101,5 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 20px;
+    background-color: mistyrose;
 }
