--- a/styles.css
+++ b/styles.css
@@ -80,20 +80,33 @@ nav ul {
     margin-top: 7px;
 }
 
-
 .article-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width:100%;
-    height:80px;
+    height:150px;
     margin-top: 20px;
-    background-color:rgb(252, 179, 155);
+    color: white;
+    background-image: url(hairsalon.jpg);
     border-radius: 30px;
     transition: transform 0.3 ease;
+    
 }
 
 #first-row-text {
     font-size: 40px;
     font-weight: 500;
     text-align: center;
+    color: white;
+    margin-bottom: 50px;
+}
+
+#second-row-text {
+    font-size: 40px;
+    font-weight: 500;
+    text-align: center;
+    color: white;
 }
 
 @media (max-width: 1600px) {
@@ -219,4 +232,17 @@ article > div > p, .article-div:hover, ul li:hover {
 
 #submit-button:hover {
     background-color: rgb(194, 194, 194);
+}
+
+.button-for-booking-home {
+    font-family: Roboto;
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.button-for-booking-home:hover {
+    background-color: rgb(206, 206, 206);
 }
