--- a/styles.css
+++ b/styles.css
@@ -246,3 +246,11 @@ article > div > p, .article-div:hover, ul li:hover {
 .button-for-booking-home:hover {
     background-color: rgb(206, 206, 206);
 }
+
+.grid-for-videos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 60px;
+    column-gap: 2px;
+    margin-top: 35px;
+}
